# eset-challenge

./: .gitignore  CMakeLists.txt  README.md
src/: FileCrawler.cpp  FileCrawler.h  FileCrawlerTest.cpp  PatternSearch.cpp  PatternSearch.h  PatternSearchTest.cpp  ProducerConsumerBuffer.h  Semaphore.cpp  Semaphore.h  TextSegment.cpp  TextSegment.h  TextSegmentTest.cpp  Utils.cpp  Utils.h  UtilsTest.cpp  dummy_test.cpp  io.cpp  io.h  io_test.cpp  io_utils.cpp  io_utils.h  io_utils_test.cpp  main.cpp  pattern_search.cpp  pattern_search.h  pattern_search_test.cpp
